--- a/littlesock/little_sock.html
+++ b/littlesock/little_sock.html
@@ -48,6 +48,20 @@
             </div>
         </section>
     </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-info">
+                <h2>Contact Us</h2>
+                <p>Email: real_wuxue@yahoo.com</p>
+                <p>Address: 123 Furry Lane, Cat City, CA 12345</p>
+            </div>
+            <div class="footer-social">
+                <a href="#" class="social-icon">Facebook</a>
+                <a href="#" class="social-icon">Twitter</a>
+                <a href="#" class="social-icon">Instagram</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
 
