optimize for seo

--- a/littlesock/little_sock.html
+++ b/littlesock/little_sock.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Adopt Little Sock, a playful and cuddly kitten, looking for a forever home. Little Sock is vaccinated, playful, and loves attention. Adopt Little Sock today!">
+    <meta name="keywords" content="adopt kitten, adopt Little Sock, kitten adoption, kittens for adoption, tabby kitten, cat adoption, adopt a pet">
+    <meta name="author" content="Kitten Hub">
+    <meta property="og:title" content="Adopt Little Sock - Playful and Cuddly Kitten">
+    <meta property="og:description" content="Adopt Little Sock, a playful tabby kitten. Little Sock is looking for a loving home. He's vaccinated, playful, and loves to cuddle.">
+    <meta property="og:image" content="IMG_7229.jpg">
+    <meta property="og:url" content="https://ios-beginner.github.io/kitten_adoption/littlesock/little_sock.html">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Adopt Little Sock - Playful and Cuddly Kitten">
+    <meta name="twitter:description" content="Little Sock is a playful black kitten looking for a forever home. He's vaccinated, playful, and loves to cuddle.">
+    <meta name="twitter:image" content="IMG_7229.jpg">
+
     <title>Adopt Little Sock - Kitten Adoption</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="little_sock.css">
@@ -23,9 +35,9 @@
                 <p><strong>Age:</strong> 18 weeks</p>
                 <p><strong>Breed:</strong> Domestic Short Hair</p>
                 <p><strong>Color:</strong> Tabby</p>
-                <p><strong>Personality:</strong> Meet Little Sock, the playful and affectionate kitten who is ready to steal your heart! With a personality as vibrant as his name suggests, Little Sock is always on the move, chasing after his favorite toys and pouncing with delight. His playful antics will keep you entertained for hours, whether he is darting around the room or engaging in a spirited game of hide and seek.
-<br><br>But it’s not just his playful spirit that makes Little Sock special. He is also incredibly affectionate, often curling up in your lap for a cozy cuddle session after a day of play. His gentle purring and soft nuzzles are sure to bring comfort and joy to anyone lucky enough to welcome his into their home.
-<br><br>If you’re looking for a furry companion who embodies both fun and love, Little Sock is the perfect match for you. Don’t miss the chance to bring this delightful kitten into your life!</p>
+                <p><strong>Personality:</strong> Meet Little Sock, the playful and affectionate kitten who is ready to steal your heart! With a personality as vibrant as his name suggests, Little Sock is always on the move, chasing after his favorite toys and pouncing with delight. His playful antics will keep you entertained for hours, whether he is darting around the room or engaging in a spirited game of hide and seek.</p>
+<p>But it’s not just his playful spirit that makes Little Sock special. He is also incredibly affectionate, often curling up in your lap for a cozy cuddle session after a day of play. His gentle purring and soft nuzzles are sure to bring comfort and joy to anyone lucky enough to welcome his into their home.</p>
+<p>If you’re looking for a furry companion who embodies both fun and love, Little Sock is the perfect match for you. Don’t miss the chance to bring this delightful kitten into your life!</p>
                 <p><strong>Health:</strong> Little Sock has been vaccinated, dewormed, neutered, and is ready for adoption. He is in great health and can’t wait to find his forever home.</p>
                 <a href="https://forms.gle/YOUR_GOOGLE_FORM_LINK" class="cta-button">Adopt Little Sock Now</a>
             </div>
