--- a/littlesock/little_sock.html
+++ b/littlesock/little_sock.html
@@ -23,7 +23,7 @@
     <div class="hero">
         <h1>Little Sock, your Furever Friend!</h1>
         <p>Meet Little Sock, the playful kitten looking for a forever home</p>
-        <a href="https://forms.gle/YOUR_GOOGLE_FORM_LINK" class="cta-button">Adopt Little Sock Now</a>
+        <a href="https://forms.gle/wwMeQJMdPgeEdsk36" class="cta-button">Adopt Little Sock Now</a>
     </div>
     <div class="container">
         <section class="profile-section">
@@ -39,7 +39,7 @@
 <p>But it’s not just his playful spirit that makes Little Sock special. He is also incredibly affectionate, often curling up in your lap for a cozy cuddle session after a day of play. His gentle purring and soft nuzzles are sure to bring comfort and joy to anyone lucky enough to welcome his into their home.</p>
 <p>If you’re looking for a furry companion who embodies both fun and love, Little Sock is the perfect match for you. Don’t miss the chance to bring this delightful kitten into your life!</p>
                 <p><strong>Health:</strong> Little Sock has been vaccinated, dewormed, neutered, and is ready for adoption. He is in great health and can’t wait to find his forever home.</p>
-                <a href="https://forms.gle/YOUR_GOOGLE_FORM_LINK" class="cta-button">Adopt Little Sock Now</a>
+                <a href="https://forms.gle/wwMeQJMdPgeEdsk36" class="cta-button">Adopt Little Sock Now</a>
             </div>
         </section>
         <section class="gallery">
