--- a/littlesock/little_sock.html
+++ b/littlesock/little_sock.html
@@ -65,7 +65,7 @@
             <div class="footer-info">
                 <h2>Contact Us</h2>
                 <p>Email: real_wuxue@yahoo.com</p>
-                <p>Address: 123 Furry Lane, Cat City, CA 12345</p>
+                <p>Address: San Jose, CA 95112</p>
             </div>
             <div class="footer-social">
                 <a href="#" class="social-icon">Facebook</a>
