change email address

--- a/littlesock/little_sock.html
+++ b/littlesock/little_sock.html
@@ -64,7 +64,7 @@
         <div class="container">
             <div class="footer-info">
                 <h2>Contact Us</h2>
-                <p>Email: real_wuxue@yahoo.com</p>
+                <p>Email: real_wuxue at yahoo.com</p>
                 <p>Address: San Jose, CA 95112</p>
             </div>
         </div>
