--- a/littlesock/little_sock.html
+++ b/littlesock/little_sock.html
@@ -32,12 +32,10 @@
             </div>
             <div class="profile-details">
                 <h1>Meet Little Sock</h1>
-                <p><strong>Age:</strong> 18 weeks</p>
+                <p><strong>Birth Date:</strong> 05/04/2024</p>
                 <p><strong>Breed:</strong> Domestic Short Hair</p>
                 <p><strong>Color:</strong> Tabby</p>
-                <p><strong>Personality:</strong> Meet Little Sock, the playful and affectionate kitten who is ready to steal your heart! With a personality as vibrant as his name suggests, Little Sock is always on the move, chasing after his favorite toys and pouncing with delight. His playful antics will keep you entertained for hours, whether he is darting around the room or engaging in a spirited game of hide and seek.</p>
-<p>But it’s not just his playful spirit that makes Little Sock special. He is also incredibly affectionate, often curling up in your lap for a cozy cuddle session after a day of play. His gentle purring and soft nuzzles are sure to bring comfort and joy to anyone lucky enough to welcome his into their home.</p>
-<p>If you’re looking for a furry companion who embodies both fun and love, Little Sock is the perfect match for you. Don’t miss the chance to bring this delightful kitten into your life!</p>
+                <p><strong>Personality:</strong> This is Little Sock, a super cute 4-month-old kitten! He loves to snuggle or nuzzle your face, and will purr happily when you pet him. He likes to follow you around looking for hugs and playtime, he is always ready for fun. Little Sock is sweet, friendly, and loves being around people and other cats</p> 
                 <p><strong>Health:</strong> Little Sock has been vaccinated, dewormed, neutered, and is ready for adoption. He is in great health and can’t wait to find his forever home.</p>
                 <a href="https://forms.gle/wwMeQJMdPgeEdsk36" class="cta-button">Adopt Little Sock Now</a>
             </div>
