add video gallery

--- a/littlesock/little_sock.html
+++ b/littlesock/little_sock.html
@@ -57,6 +57,29 @@
                 </div>
             </div>
         </section>
+        <!-- Video Gallery Section -->
+        <section class="video-gallery">
+            <h2>Little Sock's Video Gallery</h2>
+            <div class="videos-container">
+                <!-- YouTube Video 1 -->
+                <div class="video-item">
+                    <h3>Little Sock Playing with Toys</h3>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/M9gJbPEenS4" title="Little Sock Playing with Toys" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+
+                <!-- YouTube Video 2 -->
+                <div class="video-item">
+                    <h3>Little Sock Purring</h3>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/WCk6wjIhllw" title="Little Sock Cuddling Time" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+
+                <!-- YouTube Video 3 -->
+                <div class="video-item">
+                    <h3>Tom and Jerry Game</h3>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/zscfv5MSE7Q" title="Tom and Jerry Game" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
     </div>
     <footer class="footer">
         <div class="container">
